--- a/src/app/pages/policie/policie.component.html
+++ b/src/app/pages/policie/policie.component.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <button type="submit" class="btn btn-success mt-3">Descargar certificado</button>
+      <button type="submit" class="btn btn-success mt-3" (click)="dowloadCertification()">Descargar certificado</button>
     </div>
   </div>
 </section>
